--- a/src/App.css
+++ b/src/App.css
@@ -1,5 +1,18 @@
+.navBack{
+  background-color:rgb(191, 174, 150) ;
+  height: 80px;
+}
 
+.navTitle{
+  font-size: 25px;
+  color: black;
+  margin-left: 120px;
+}
 
+.navLink{
+  color: black;
+  margin-right: 20px;
+}
 
 /* .App {
   text-align: center;
