project card basic format

--- a/src/App.css
+++ b/src/App.css
@@ -38,6 +38,12 @@
   margin-bottom: 60px;
 }
 
+.projrctCard{
+  margin-top: 20px;
+  margin-bottom: 20px;
+  width: auto;
+}
+
 /* .App {
   text-align: center;
 }
