--- a/src/App.css
+++ b/src/App.css
@@ -21,16 +21,28 @@
 }
 
 /* profile */
-.job-title{
-  margin-top: 100px;
+
+.my-name{
+  font-size: 40px;
+  padding-right: 10px;
 }
 
+.job-title{
+  font-size: 35px;
+  margin-top: 40px;
+  padding-right: 10px;
+}
+
+
 .my-photo{
+  /* position: absolute;
+  left: 40%; */
   width: 300px;
   height: 300px;
+  padding-left: 10px;
   border-radius: 50%;
   object-fit: cover;
-  box-shadow: 2px 2px 5px rgba(0, 0, 0, 0.2);
+  /* box-shadow: 2px 2px 5px rgba(0, 0, 0, 0.2); */
 }
 .see-more{
   float: right;
@@ -38,18 +50,26 @@
 }
 
 .skills{
-  margin-left: 70px;
-  margin-top: 100px;
+  position: absolute;
+}
+
+.skill-item{
+  margin-right: 20px;
 }
 
 .skill-image{
-  width: 30px;
-  height: 30px;
-  margin-right: 20px;
+  width: 50px;
+  height: 50px;
+  display: block;
+  margin: 0 auto ;
 }
 
 .see-more-text{
   color: rgb(93, 99, 107);
+}
+
+.sns-link{
+  margin-top: 30px;
 }
 
 .btn-about-me-text{
