--- a/src/App.css
+++ b/src/App.css
@@ -1,6 +1,11 @@
+.App{
+  background-color: rgb(253, 248, 225);
+}
+
 /* header */
 .header-back{
-  background-color: rgb(191, 174, 150);
+  background-color: aliceblue;
+  height: 100px;
 }
 
 .title-link{
@@ -14,17 +19,28 @@
 }
 
 /* footer */
-.footer-back{
-  background-color:  rgb(228, 221, 212);
+.footer{
   width: 100%;
   height: 80px;
 }
 
-/* profile */
+.footer-sns-links{
+  margin-top: 0px;
+}
 
+.footer-wantedly{
+  width: 27px;
+}
+
+
+.footer-sns-link{
+  font-size: 25px;
+}
+
+/* profile */
 .my-name{
   font-size: 40px;
-  padding-right: 10px;
+  padding-right: 15px;
 }
 
 .job-title{
@@ -35,21 +51,31 @@
 
 .photo-card{
   border: none !important;
+  margin-left: 15px;
+  background-color: rgb(253, 248, 225) !important;
 }
 
 .my-photo{
   /* position: absolute;
   left: 40%; */
-  width: 300px;
-  height: 300px;
-  padding-left: 10px;
+  width: 250px;
+  height: 250px;
+  /* padding-left: 15px; */
   border-radius: 50%;
   object-fit: cover;
   /* box-shadow: 2px 2px 5px rgba(0, 0, 0, 0.2); */
 }
 
+.sns-links{
+  margin-top: 30px;
+}
+
 .wantedly{
-  width: 20px;
+  width: 30px;
+}
+
+.sns-link{
+  font-size: 30px;
 }
 
 /* .see-more{
@@ -76,9 +102,6 @@
   color: rgb(93, 99, 107);
 } */
 
-.sns-link{
-  margin-top: 30px;
-}
 
 .btn-about-me-text{
   text-decoration: none;
