style up of cards

--- a/src/App.css
+++ b/src/App.css
@@ -110,3 +110,13 @@
 .comming-soon{
   padding-top: 270px;
 }
+
+.tutorial-img{
+  width: 150px;
+  padding-left: 10px;
+}
+
+.step-cards{
+  padding-left: 200px;
+  padding-right: 200px;
+}
