--- a/src/App.css
+++ b/src/App.css
@@ -22,7 +22,7 @@
 .title-link{
   color: black;
   margin-left: 150px;
-  font-size: 25px;
+  font-size: 35px;
 }
 
 .text-link{
@@ -198,4 +198,13 @@
 
 .step-info{
   align-content: center;
+}
+
+.about{
+  width: 100%;
+  padding-top: 250px;
+  padding-bottom: 250px;
+  margin-top: 20px;
+  margin-bottom: 20px;
+  border: none;
 }
