--- a/src/App.css
+++ b/src/App.css
@@ -196,15 +196,15 @@
 .step-info{
   align-content: center;
 }
-
+/*
 .about{
-  /* width: 100%;
+  width: 100%;
   padding-top: 250px;
   padding-bottom: 250px;
   margin-top: 20px;
   margin-bottom: 20px;
-  border: none; */
-}
+  border: none;
+} */
 
 .title-card{
   width: 200px;
