--- a/src/App.css
+++ b/src/App.css
@@ -213,3 +213,16 @@
   box-shadow: 1px 1px 2px rgba(129, 129, 129, 0.4);
   border: 0.5px solid rgba(129, 129, 129, 0.4);
 }
+
+.photos-container{
+  width: 100%;
+  height: 500px;
+  padding: 3%;
+  margin-bottom: 20px;
+  border: 1px solid rgba(129, 129, 129, 0.4);
+}
+
+.genre-item.is-active{
+  background-color: rgb(108, 117, 125);
+  color: white;
+}
