--- a/src/App.css
+++ b/src/App.css
@@ -218,6 +218,7 @@
   width: 100%;
   height: 500px;
   padding: 3%;
+  background-color: white;
   margin-bottom: 20px;
   border: 1px solid rgba(129, 129, 129, 0.4);
 }
@@ -225,4 +226,8 @@
 .genre-item.is-active{
   background-color: rgb(108, 117, 125);
   color: white;
+}
+
+.trial{
+  width: 120%;
 }
