--- a/src/App.css
+++ b/src/App.css
@@ -206,12 +206,24 @@
   border: none;
 } */
 
-.title-card{
+/* card
+rounded-pill */
+/* .title-card{
   width: 200px;
   margin: auto;
   padding: 10px;
   box-shadow: 1px 1px 2px rgba(129, 129, 129, 0.4);
   border: 0.5px solid rgba(129, 129, 129, 0.4);
+} */
+
+.title-card{
+  margin-left: 250px;
+  margin-top: 30px;
+}
+
+.introduce-disc{
+  margin-left: 250px;
+  margin-top: 0px;
 }
 
 .photos-container{
