--- a/src/App.css
+++ b/src/App.css
@@ -228,7 +228,7 @@ rounded-pill */
 
 .photos-container{
   width: 100%;
-  height: 500px;
+  height: 2000px;
   padding: 3%;
   background-color: white;
   margin-bottom: 20px;
@@ -253,4 +253,9 @@ rounded-pill */
 
 .trial{
   width: 120%;
+}
+
+.nature-photo{
+  width: 400px;
+  margin: 20px;
 }
