--- a/src/App.css
+++ b/src/App.css
@@ -150,8 +150,10 @@
 }
 
 .lemake-image{
-  width: 293px;
-  height: 462px;
+  /* width: 293px; */
+  max-height: 462px;
+  height: auto;
+  width: auto;
   /* width: 200px;
   height: auto; */
   box-shadow: 2px 2px 4px rgba(0, 0, 0, 0.4);
